# generative-ai-reskilling

./: .env.example  .gitignore  CLAUDE.md  README.md  mise.local.toml  pyproject.toml
docs/design/: conversation-history.md
docs/spec/: 仕様書.md
src/: main.py
src/api/: chat.py  sessions.py
src/config/: prompts.py  settings.py
src/models/: database.py  schemas.py
src/services/: document_loader.py  embeddings.py  rag_service.py  session_service.py
tests/: conftest.py
tests/fixtures/: test_spec.md
tests/integration/: test_api_integration.py  test_full_pipeline.py  test_session_api.py
tests/unit/: test_chat_api.py  test_chat_api_refactored.py  test_config.py  test_document_loader.py  test_document_loader_refactored.py  test_embedding_service.py  test_main.py  test_prompts.py  test_rag_service.py  test_rag_service_conversation_history.py  test_schemas.py  test_session_service.py
web/: README.md  biome.json  package.json  vitest.config.ts
web/app/: entry.server.tsx  test-setup.ts
web/app/__tests__/: ChatInterface.test.tsx  MessageBubble.test.tsx  SessionSidebar.test.tsx  api.test.ts
web/app/components/: ChatInterface.tsx  LoadingSpinner.tsx  MessageBubble.tsx  SessionSidebar.tsx  SourceInfo.tsx
web/app/lib/: api.ts  storage.ts  types.ts
web/app/routes/: _index.tsx
