[project]
name = "generative-ai-reskilling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.3.23",
    "openai==1.71.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=10"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
asyncio_mode = "auto"
